--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,64 +8,75 @@
     android:background="@drawable/background"
     tools:context="com.example.mathwiz.SettingsActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/settingsTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/settings_lrg"
-        android:padding="10dp" />
+        android:fontFamily="@font/main_font"
+        android:text="@string/settings"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:textSize="70sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/difficultyTextView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/difficulty"
-            android:layout_gravity="center_horizontal"/>
+            android:fontFamily="@font/main_font"
+            android:text="@string/difficulty"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="56sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/easy_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/easyButton"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:padding="12dp"
-                app:srcCompat="@drawable/easy" />
-
-            <ImageButton
-                android:id="@+id/medium_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/main_font"
+                android:text="@string/easy"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/medButton"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:backgroundTint="@color/colorAccentDark"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:padding="12dp"
-                app:srcCompat="@drawable/medium"/>
-
-            <ImageButton
-                android:id="@+id/hard_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/main_font"
+                android:text="@string/medium"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"/>
+
+            <Button
+                android:id="@+id/hardButton"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:backgroundTint="@color/colorAccentDark"
-                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="12dp"
-                app:srcCompat="@drawable/hard"/>
+                android:fontFamily="@font/main_font"
+                android:text="@string/hard"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"/>
 
         </LinearLayout>
 
