--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,12 +12,10 @@
         android:id="@+id/settingsTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/main_font"
         android:text="@string/settings"
+        style="@style/TitleFont"
         android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:textSize="70sp" />
+        android:textAllCaps="false" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,11 +27,9 @@
             android:id="@+id/difficultyTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/main_font"
+            style="@style/LargeFont"
             android:text="@string/difficulty"
-            android:textAlignment="center"
-            android:textColor="@android:color/black"
-            android:textSize="56sp" />
+            android:textAlignment="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
