Add Game Over Screen, beginings of Twitter implementation

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,9 @@
         <item name="android:textColor">@color/colorHighlight</item>
     </style>
 
+    <style name="HighlightFont" parent="BaseFont">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/colorAccentDark</item>
+    </style>
+
 </resources>
