--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -99,7 +99,8 @@
                 android:text="Answer 1"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black"
-                android:textSize="50sp" />
+                android:textSize="50sp"
+                android:visibility="visible" />
 
             <Button
                 android:id="@+id/answerButton2"
