--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -76,6 +76,20 @@
                 android:textColor="@android:color/black"
                 android:textSize="50sp" />
 
+            <Button
+                android:id="@+id/twitterButton"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/main_font"
+                android:includeFontPadding="false"
+                android:text="Cheat Codes"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black"
+                android:textSize="50sp" />
+
         </LinearLayout>
     </FrameLayout>
 
