--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorAccentDark">#E0B024</color>
     <color name="colorBlackOverlay">#66000000</color>
     <color name="colorHighlight">#d11141</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
