Add Actionbar menu item functionality that allows users to go between activities using the action bar menu items

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,4 +10,8 @@
         android:title="@string/high_scores"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/action_playagain"
+        android:title="@string/play_again"
+        app:showAsAction="never"/>
+
 </menu>
